--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 
 # CakePHP 2
 
-/app/tmp/*
-/app/Config/core.php
-/app/Config/database.php
-/vendors/*
+/tmp/*
+/Config/core.php
+/Config/database.php
+/Vendor/*
