--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         - '8989:80'
     volumes:
         - './:/var/www/html/'
+        - './docker/php/myphp.ini:/usr/local/etc/php/conf.d/custom.php.ini'
     networks:
         - sistemas-net
 networks:
